# python_basic_otus

./: README.md  db.json  posts.json  users.json
homework_01/: main.py
homework_02/: __init__.py  base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  fastapi_app.py  pyproject.toml
homework_04/: config.py  database.db  db.json  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.txt
homework_04/alembic/: env.py
homework_04/alembic/versions/: 42d7689c5751_start.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_07/: pyproject.toml
homework_07/blog/blog/: settings.py
homework_07/blog/main/: forms.py  models.py  urls.py  views.py
homework_07/blog/main/migrations/: 0004_remove_user_posts_post_user.py
homework_07/blog/templates/: index.html  root.html
homework_08/blog/blog/blog/: urls.py
homework_08/blog/blog/main/: admin.py  forms.py  models.py  urls.py  views.py
homework_08/blog/blog/templates/: root.html
homework_09/blog/blog/: settings.py  urls.py
homework_09/blog/main/: admin.py  forms.py  models.py  urls.py  views.py
homework_09/blog/main/fixtures/: main.json
homework_09/blog/main/migrations/: 0001_initial.py  0002_alter_post_options_alter_user_options.py
homework_09/blog/main/tests/: test_models.py  test_views.py
homework_09/blog/myauth/: admin.py  forms.py  models.py  urls.py  views.py
homework_09/blog/myauth/migrations/: 0001_initial.py  0002_alter_myuser_options.py
homework_09/blog/templates/: index.html  root.html
(+15 files in other folders)
