[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["IngvarOrlov <kampaiski@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_03"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
