[tool.poetry]
name = "homework-04"
version = "0.1.0"
description = ""
authors = ["IngvarOrlov <kampaiski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
black = "^24.2.0"
asyncpg = "^0.29.0"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
